--- a/app/src/app/navegador/navegador.component.html
+++ b/app/src/app/navegador/navegador.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark">
   <div class="container-fluid d-flex justify-content-between">
-    <a class="navbar-brand" href="">
+    <a class="navbar-brand" href="/private/historialprestamos">
       <img src="logo-G.png" alt="Logo"/>
     </a>
   </div>
