--- a/app/src/app/validar-informacion/validar-informacion.component.html
+++ b/app/src/app/validar-informacion/validar-informacion.component.html
@@ -1,7 +1,7 @@
 <!-- Flecha hacia atrás -->
 <div class="row m-0">
     <div class="">
-        <a href="/login" class="btn-atras text-reset m-0" style="padding: 0;">&lt;</a>
+        <a [routerLink]="['/private/historialprestamos']" class="btn-atras text-reset m-0" style="padding: 0;">&lt;</a>
     </div>
 </div>
 
