--- a/app/src/app/prestamobien/prestamobien.component.html
+++ b/app/src/app/prestamobien/prestamobien.component.html
@@ -6,6 +6,6 @@
     <div class="message"></div>
     <div class="message"></div>
     <hr class="border border-light border-1 opacity-100">
-    <div class="message"><a href="/login" class="button">Volver al Inicio</a></div>
+    <div class="message"><a href="/private/historialprestamos" class="button">Volver al Inicio</a></div>
   
   </div>
