--- a/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
+++ b/app/src/app/cronograma-de-pagos/cronograma-de-pagos.component.html
@@ -83,7 +83,7 @@
                 <p class="text-end">Para ver su cronograma en formato PDF, descargue:</p>
             </div>
             <div class="row download">
-                <p class="text-end download">FG_Cronograma N°<span>XXX</span>.pdf</p>
+                <button class="btn eb" (click)="downloadPdf()">Descargar PDF</button>
             </div>
         </div>
 
