--- a/app/src/app/navegador/navegador.component.html
+++ b/app/src/app/navegador/navegador.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark">
   <div class="container-fluid d-flex justify-content-between">
     <a class="navbar-brand" href="/private/historialprestamos">
-      <img src="../../../public/logo.png" alt="Logo"/>
+      <img src="https://i.imgur.com/zEgZ6hH.png" alt="Logo"/>
     </a>
   </div>
 </nav>
