--- a/app/src/app/piepagina/piepagina.component.html
+++ b/app/src/app/piepagina/piepagina.component.html
@@ -7,7 +7,7 @@
     <!-- Centro: Logo -->
     <div class="col-md-2 text-center">
       <a class="nav-link" href="/inicio">
-        <img src="../../../public/logo.png" alt="Logo" class="footer-logo"/>
+        <img src="https://i.imgur.com/zEgZ6hH.png" alt="Logo" class="footer-logo"/>
       </a>
     </div>
 
