feat: Interfaz Iniciar Sesion rediseñada

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navegador></app-navegador>
+<!-- <app-navegador></app-navegador> -->
 <router-outlet></router-outlet>
-<app-piepagina></app-piepagina>
+<!-- <app-piepagina></app-piepagina> -->
 
