feat:Arreglando login y corrigiendo el logo

--- a/app/src/app/historial-pagos/historial-pagos.component.html
+++ b/app/src/app/historial-pagos/historial-pagos.component.html
@@ -1,11 +1,11 @@
 <body class="detalle container-fluid fw-semibold fst-italic text-light row">
   <div class="col-md-1">
     <div class="card mt-5 nav">
-      <img src="inso.png"/>
-      <button class="btn btn-outline-light fw-semibold fst-italic mb-3 mt-4 fs-5 butons"><i class="fa-regular fa-circle-user fa-2xl"></i> Cuenta </button>
-      <button class="btn btn-outline-light  fw-semibold fst-italic mb-3 fs-5 butons"><i class="fa-solid fa-file-invoice-dollar fa-2xl"></i>Historial</button>
-      <button class="btn btn-outline-light  fw-semibold fst-italic fs-5 butons" (click)="realizarPrestamo()"><i class="fa-solid fa-dollar-sign fa-2xl"></i> Prestamos</button>
-      <button class="btn btn-outline-light  fw-semibold fst-italic cerrarbtn " (click)="cerrarSesion()"><i class="fa-regular fa-circle-left fa-xl"></i> Cerrar Sesion</button>
+      <img class="img-fluid" src="https://i.imgur.com/nQrwesi.png"/>
+      <button class="btn btn-outline-light  fw-semibold fst-italic mb-3 mt-4  butons"><i class="fa-regular fa-circle-user fa-2xl"></i> Cuenta </button>
+      <button class="btn btn-outline-light  fw-semibold fst-italic mb-3  butons"><i class="fa-solid fa-file-invoice-dollar fa-2xl"></i>Historial</button>
+      <button class="btn btn-outline-light  fw-semibold fst-italic  butons" (click)="realizarPrestamo()"><i class="fa-solid fa-dollar-sign fa-2xl"></i> Prestamos</button>
+      <button class="btn btn-outline-light  fw-semibold fst-italic cerrarbtn " (click)="cerrarSesion()"><i class=" fa-regular fa-circle-left fa-xl"></i> Cerrar Sesion</button>
     </div>
   </div>
 
