--- a/app/src/app/iniciosesion/iniciosesion.component.html
+++ b/app/src/app/iniciosesion/iniciosesion.component.html
@@ -1,20 +1,18 @@
-<div class="col-md-12">
-  <div class="login-container container-fluid d-flex justify-content-center align-items-center row">
-    <div class="card w-25 ">
-        <div class="card-body row">
-          <div  class="text-center">
-            <p class="fs-1 inso">I N S O</p>
-          </div>
-          <img src="inso.png" class="mb-3 iimg-fluid"/>
+  <div class="login-container container-fluid d-flex justify-content-center align-items-center row m-0 p-0">
+    <div class="col-md-3 bg-light rounded-4 pb-3">
+        <div class="imgcontainer text-center">
+          <img src="https://i.imgur.com/nQrwesi.png"/>
+        </div>
+        <div class="card-body row p-1 me-4 ms-4">  
           <form [formGroup]="formUser" (ngSubmit)="enviar()" class="form">
               <div class="mb-3 d-grid">
-                <input type="text" class="form-control rounded-pill border-2" formControlName="username" placeholder="Nombre de usuario" required>
+                <input type="text" class="form-control rounded-pill border-2 border-primary" formControlName="username" placeholder="Usuario" required>
                 <div class="alert alert-danger mt-3" *ngIf="formUser.get('username')?.invalid && formUser.get('username')?.touched">
                   <span *ngIf="formUser.get('username')?.errors?.['required']">El nombre de usuario es obligatorio.</span>
                 </div>
               </div>
               <div class="mb-3 d-grid">
-              <input type="password" class="form-control rounded-pill border-2" formControlName="password" placeholder="Contraseña" required>
+              <input type="password" class="form-control rounded-pill border-2 border-primary" formControlName="password" placeholder="Contraseña" required>
                 <div class="alert alert-danger mt-3" *ngIf="formUser.get('password')?.invalid && formUser.get('password')?.touched">
                   <span *ngIf="formUser.get('password')?.errors?.['required']">La contraseña es obligatoria.</span>
                   <span *ngIf="formUser.get('password')?.errors?.['minlength']">Su contraseña no puede ser menor a 4 caracteres.</span>
@@ -51,5 +49,5 @@
       <p class="text-center text-light fst-italic fw-semibold">Copyright © 2024, All rights reserved.</p>
   </div>
   </div>
-</div>
+
 
