--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
@@ -22,15 +22,15 @@
                    formControlName="monto"  
                    (keypress)="validateInput($event)" />
             <div *ngIf="prestamoForm.get('monto')?.invalid && prestamoForm.get('monto')?.touched" class="text-danger">
-              El monto debe ser mayor o igual a 500.
+              El monto debe ser mayor a 0.
             </div>
           </div>
   
           <div class="col-4">
             <button type="button" 
                     class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light"
-                    (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime(1) : null"
-                    [disabled]="prestamoForm.get('monto')?.value < 500 || prestamoForm.get('monto')?.value > 10000 || selectedTimeButton === 1">
+                    (click)="prestamoForm.get('monto')?.value > 0 ? selectTime(1) : null"
+                    [disabled]="prestamoForm.get('monto')?.value <= 0 || prestamoForm.get('monto')?.value > 5000 || selectedTimeButton === 1">
               <div class="text-center fs-4 fw-bold">1</div>
               <div class="text-center fs-4 fw-bold">mes</div>
               <div class="text-center">10 % de interés</div>
@@ -40,8 +40,8 @@
           <div class="col-4">
             <button type="button" 
                     class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light"
-                    (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime(6) : null"
-                    [disabled]="prestamoForm.get('monto')?.value < 500 || prestamoForm.get('monto')?.value > 10000  || selectedTimeButton === 6">
+                    (click)="prestamoForm.get('monto')?.value > 0 ? selectTime(6) : null"
+                    [disabled]="prestamoForm.get('monto')?.value <= 0 || prestamoForm.get('monto')?.value > 5000  || selectedTimeButton === 6">
               <div class="text-center fs-4 fw-bold">6</div>
               <div class="text-center fs-4 fw-bold">meses</div>
               <div class="text-center">20 % de interés</div>
@@ -58,3 +58,4 @@
       </form>
     </div>
   </div>
+  
