--- a/app/src/app/validar-informacion/validar-informacion.component.scss
+++ b/app/src/app/validar-informacion/validar-informacion.component.scss
@@ -108,3 +108,11 @@
     transform: rotate(360deg);
   }
 }
+ .flechita{
+  cursor: pointer;
+  transition: transform 0.3s ease;
+
+  &:hover {
+      transform: scale(1.1);
+  }
+}
