--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.scss
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.scss
@@ -121,3 +121,126 @@
     background: linear-gradient(90deg, #111217 0%, #5C627D 100%);
     
 }
+
+
+/*Gino*/
+
+.detalle{
+    min-height: 100vh;
+    margin: auto;
+    background: linear-gradient(180deg,#00203D  0%,#0056A3  80%);
+}
+
+.detailCron{
+    width: 100%;
+    background: linear-gradient(270deg, #6CC1EB 0%, #3D6D85 100%);
+}
+
+.butons:hover{
+    background-color: orange;
+    color: white;
+}
+
+.cerrarbtn{
+    margin-top: 450px;
+}
+
+.cerrarbtn:hover{
+    background-color: orange;
+    color: white;
+}
+
+.card{
+    background: linear-gradient(270deg, #6CC1EB 0%, #3D6D85 100%);
+}
+
+.nav{
+    min-height: 90vh;
+}
+
+/*btn*/
+.btn-mes {
+    background-image: linear-gradient(90deg, #F28907 0%, #8C4F04 100%);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 25px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+
+    width: 200px;
+}
+
+.btn-continuar {
+    background-image: linear-gradient(90deg, #6CC1EB 0%, #3D6D85 100%);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 25px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    width: 300px;
+}
+/*Formulario soles*/
+.form-soles {
+    height: 60px;
+    color: white;
+    background-color: transparent;
+    &::placeholder {
+        color: white; /* Color blanco para el placeholder */
+    }
+}
+
+/*flecha*/
+.ico i{
+    height: 15px;
+}
+
+/*Barra*/
+
+.barra{
+    width: 80%;
+}
+
+.progress-bar-container {
+    background-color: #fff; /* Fondo blanco */
+    border: 1px solid #000; /* Borde opcional */
+    border-radius: 5px; /* Bordes redondeados */
+    width: 100%; /* Ancho completo del contenedor */
+    height: 20px; /* Altura de la barra */
+    overflow: hidden; /* Ocultar el desbordamiento */
+    position: relative; /* Posicionamiento relativo para el contenido interno */
+}
+
+.progress-bar {
+    background-color: #F28907; /* Color de la barra de carga */
+    width: 50%; /* Cargada hasta el 50% */
+    height: 100%; /* Altura completa del contenedor */
+    transition: width 0.3s ease; /* Transición suave al cambiar el ancho */
+}
+
+.footer{
+    color: white!important;
+}
+
+/**/
+.m-continuar{
+    margin-top: 200px;
+    margin-bottom: 100px;
+}
+
+.v100vh{
+    min-height: 100vh!important;
+}
+
+.ico i:hover{
+    cursor: pointer;
+    
+}
+
+.ico p:hover{
+    cursor: pointer;
+    
+}
