--- a/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
+++ b/app/src/app/ingresar-detalles-de-prestamos-v2/ingresar-detalles-de-prestamos-v2.component.html
@@ -1,60 +1,79 @@
-<div class="row">
-    <div class="d-flex justify-content-center align-items-center">
-      <div class="col-12 d-flex justify-content-center align-items-center">
-        <div class="flechita" (click)="volver()">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
-            <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="80" font-family="Arial" fill="black">&lt;</text>
-          </svg>
-        </div>
-        <h2 class="h100">Ingrese los detalles del préstamo</h2>
+<div class="detalle container-fluid fw-semibold fst-italic text-light row">
+  <div class="v100vh">
+    <div class="justify-content-center d-flex flex-column">
+      <div class="row mt-5 mb-5">
+        <h2>Ingrese los detalles del préstamo</h2>
       </div>
-    </div>
-  </div>
-  
-  <div class="container w100 d-flex justify-content-center">
-    <div class="container">
+    
+      <div class="row mt-5 mb-5">
+        <div class="barra">
+          <div class="progress-bar-container">
+            <div class="progress-bar"></div>
+          </div>
+        </div>
+      </div>
+    
+      <div class="row mt-5">
+        <div class="ico d-flex align-items-center" (click)="volver()">
+          <i class="fa-solid fa-angle-left "></i>
+          <p class="m-0 ps-2">Volver</p>
+        </div>
+      </div>
+    
       <form [formGroup]="prestamoForm" (ngSubmit)="continue()">
-        <div class="row d-flex justify-content-center eb container-fluid">
-          <div class="col-4">
+        <div class="row d-flex justify-content-center mt-5 mb-5">
+          <div class="row col-10">
+            <p>Ingrese el monto</p>
+          </div>
+          <div class="col-md-4 d-flex align-items-center">
             <input type="text" 
-                   class="form-control" 
-                   placeholder="s/" 
+                   class="form-control form-soles" 
+                   placeholder="S/" 
                    formControlName="monto"  
                    (keypress)="validateInput($event)" />
             <div *ngIf="prestamoForm.get('monto')?.invalid && prestamoForm.get('monto')?.touched" class="text-danger">
-              El monto debe ser mayor o igual a 500.
+              El monto debe ser mayor o igual a 500 y menor o igual a 10,000.
             </div>
           </div>
-  
-          <div class="col-4">
+      
+          <div class="col-md-3 d-flex justify-content-center">
             <button type="button" 
-                    class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light"
+                    class="btn btn-mes m-0" 
                     (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime(1) : null"
                     [disabled]="prestamoForm.get('monto')?.value < 500 || prestamoForm.get('monto')?.value > 10000 || selectedTimeButton === 1">
-              <div class="text-center fs-4 fw-bold">1</div>
-              <div class="text-center fs-4 fw-bold">mes</div>
-              <div class="text-center">10 % de interés</div>
+              <span></span>1 mes <br>10 % de interés
             </button>
           </div>
-  
-          <div class="col-4">
+      
+          <div class="col-md-3 d-flex justify-content-center">
             <button type="button" 
-                    class="col-5 btn btn-dark d-flex flex-column align-items-center justify-content-center w80p custom-button-b text-light"
+                    class="btn btn-mes m-0" 
                     (click)="prestamoForm.get('monto')?.value >= 500 ? selectTime(6) : null"
-                    [disabled]="prestamoForm.get('monto')?.value < 500 || prestamoForm.get('monto')?.value > 10000  || selectedTimeButton === 6">
-              <div class="text-center fs-4 fw-bold">6</div>
-              <div class="text-center fs-4 fw-bold">meses</div>
-              <div class="text-center">20 % de interés</div>
+                    [disabled]="prestamoForm.get('monto')?.value < 500 || prestamoForm.get('monto')?.value > 10000 || selectedTimeButton === 6">
+              <span></span>6 meses <br>20 % de interés
             </button>
           </div>
         </div>
-  
-        <div class="row v100 d-flex justify-content-center">
-          <div class="row w80">
-            <button class="btn2 eb" type="submit" 
-                     [disabled]="prestamoForm.invalid || !selectedTimeButton">Confirmar</button>
+    
+        <div class="row d-flex justify-content-center m-continuar">
+          <div class="col-md-4 justify-content-center d-flex ">
+            <button class="btn btn-continuar" 
+                    type="submit" 
+                    [disabled]="prestamoForm.invalid || !selectedTimeButton">
+              Confirmar
+            </button>
           </div>
         </div>
       </form>
+    
     </div>
+    
+    <div class="row mt-1">
+      <div class="line">
+        <hr class="border border-1 opacity-100">
+      </div>
+      <p class="text-end text-warning fst-italic fw-semibold footer">Copyright © 2024, All rights reserved.</p>
+    </div> 
+    
   </div>
+</div>
