--- a/app/src/app/validar-informacion/validar-informacion.component.html
+++ b/app/src/app/validar-informacion/validar-informacion.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="progress m-3 " role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-        <div class="progress-bar bg-warning " style="width: 25%"></div>
+        <div class="progress-bar" style="width: 25%"></div>
       </div>
 
       <div class="row">
